--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -44,3 +44,28 @@
 .hero__content{
     padding-top: 45px;
 }
+
+.timer__count{
+    background: var(--primary-color);
+    height: 300px;
+}
+
+.timer__count img{
+    width: 70% !important;
+    height: 70% !important;
+    object-fit: contain;
+}
+
+.store__btn{
+    background: #fff;
+   
+}
+
+.store__btn a{
+    text-decoration: none;
+    color: var(--primary-color);
+    font-weight: 600;
+}
+.store__btn a:hover{
+    color: var(--primary-color) ;
+}
