--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -77,11 +77,39 @@
     cursor: pointer;
 }
 
-.nav__icons span img{
+.nav__icons .profile img{
     width: 30px;
     height: 30px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+.nav__icons .profile{
+    position:relative;
+    z-index: 10;
+
 }
 
+.nav__icons .profile .profile__actions{
+
+    position: absolute;
+    top:98%;
+    left: 0;
+    width: 150px;
+    z-index: 12;
+    padding:15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: var(--card-bg-01);
+    line-height: 30px;
+   display: none;
+    cursor: pointer;
+
+}
+
+.show__profile{
+    display: block;
+}
 .mobile__menu{
     font-size: 1.3rem;
     color: var(--primary-color);
@@ -125,8 +153,7 @@
          flex-direction: column;
          align-items: center;
          justify-content: center;
-
-    }
+   }
     .active__menu{
         display: block;
     }
